--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,28 @@
-version: '3'
+version: "3"
 services:
   db:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: myapp_development
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
     volumes:
-      - db-data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
+      - mysql_data:/var/lib/mysql
   web:
-    build: .
-    command: bundle exec rails server -p 3000 -b '0.0.0.0'
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    env_file:
+      - ./.env.local
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - ./:/app
     ports:
       - "3000:3000"
     depends_on:
       - db
+    tty: true
+    stdin_open: true
 volumes:
-  db-data:
+  mysql_data:
+
